--- a/package.json
+++ b/package.json
@@ -27,14 +27,17 @@
     "@types/react": "latest",
     "@types/react-big-calendar": "latest",
     "@types/react-dom": "latest",
+    "@typescript-eslint/parser": "^5.62.0",
     "@vitejs/plugin-react": "latest",
-    "cypress": "latest",
+    "cypress": "^15.8.1",
     "eslint": "latest",
     "eslint-config-prettier": "latest",
     "eslint-plugin-prettier": "latest",
     "eslint-plugin-react": "latest",
     "eslint-plugin-react-hooks": "latest",
     "jest": "latest",
+    "prettier": "^3.7.4",
+    "prettier-eslint": "^16.4.2",
     "ts-jest": "latest",
     "typescript": "latest",
     "vite": "latest"
