--- a/package.json
+++ b/package.json
@@ -7,7 +7,27 @@
     "build": "vite build",
     "preview": "vite preview",
     "test": "jest",
-    "cypress:open": "cypress open"
+    "cypress:open": "cypress open",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build",
+    "test:screenshot": "loki test",
+    "test:screenshot:update": "loki update",
+    "test:screenshot:approve": "loki approve"
+  },
+  "loki": {
+    "configurations": {
+      "chrome.laptop": {
+        "target": "chrome.docker",
+        "width": 1366,
+        "height": 768,
+        "deviceScaleFactor": 1,
+        "mobile": false
+      },
+      "chrome.iphone7": {
+        "target": "chrome.docker",
+        "preset": "iPhone 7"
+      }
+    }
   },
   "dependencies": {
     "@reduxjs/toolkit": "latest",
@@ -15,14 +35,22 @@
     "axios": "latest",
     "date-fns": "latest",
     "dayjs": "latest",
+    "framer-motion": "^12.23.26",
     "react": "latest",
     "react-big-calendar": "latest",
     "react-dom": "latest",
     "react-redux": "latest",
-    "react-router-dom": "latest"
+    "react-router-dom": "latest",
+    "react-swipeable": "^7.0.2"
   },
   "devDependencies": {
     "@jest/test-sequencer": "^30.2.0",
+    "@storybook/addon-essentials": "^8.6.14",
+    "@storybook/addon-interactions": "^8.6.14",
+    "@storybook/blocks": "^8.6.14",
+    "@storybook/react": "^8.6.15",
+    "@storybook/react-vite": "^8.6.15",
+    "@storybook/test": "^8.6.14",
     "@types/jest": "latest",
     "@types/react": "latest",
     "@types/react-big-calendar": "latest",
@@ -36,8 +64,10 @@
     "eslint-plugin-react": "latest",
     "eslint-plugin-react-hooks": "latest",
     "jest": "latest",
+    "loki": "^0.35.1",
     "prettier": "^3.7.4",
     "prettier-eslint": "^16.4.2",
+    "storybook": "^8.6.15",
     "ts-jest": "latest",
     "typescript": "latest",
     "vite": "latest"
